--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,7 @@
     }
   }
 }
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark;
+}
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
