I have added a extra section where new users can see their offers

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,4 @@
     }
   }
 }
-@plugin "daisyui" {
-  themes: light --default, dark --prefersdark;
-}
-@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+@custom-variant dark (&:where(.dark, .dark *));
